fix overflow-x body

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -19,4 +19,5 @@ h1 {
 
 html, body {
   height: 100dvh;
+  overflow-x: hidden;
 }
